[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/manager/manager.gd" type="Script" id=1]
[ext_resource path="res://entities/challenges/Challenges.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/screens/tiledscreen/buttons/new_game.tscn" type="PackedScene" id=3]
[ext_resource path="res://graphics/fonts/Turret_Road/TurretRoad-ExtraBold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.513726 )
expand_margin_left = 10.0

[sub_resource type="DynamicFont" id=3]
size = 72
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Manager" type="Camera"]
transform = Transform( 0.995704, -0.0695951, 0.0610813, 0.0316946, 0.875943, 0.481373, -0.087005, -0.477369, 0.874385, -5.56125, 36.9145, 86.8942 )
current = true
fov = 45.0
far = 1000.0
script = ExtResource( 1 )
spawn_player_path = NodePath("../PlayerSpawn")

[node name="PreGame" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="PreGame"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -223.5
margin_top = 84.0
margin_right = 239.5
margin_bottom = 164.0
custom_fonts/font = SubResource( 1 )
text = "ALPHA ROOM"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Challenges" parent="PreGame" instance=ExtResource( 2 )]

[node name="Start" parent="PreGame" instance=ExtResource( 3 )]
margin_left = 339.5
margin_top = 501.0
margin_right = 699.5
margin_bottom = 561.0
custom_styles/focus = SubResource( 2 )
scene = "res://entities/screens/levels_screen.tscn"
label_text = "Start"

[node name="Label" parent="PreGame/Start" index="0"]
text = "Start"
align = 1

[node name="PostGame" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Finished" type="Label" parent="PostGame"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -151.255
margin_top = 41.632
margin_right = 155.745
margin_bottom = 121.632
custom_fonts/font = SubResource( 3 )
text = "Finished"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Challenges" parent="PostGame" instance=ExtResource( 2 )]
margin_left = -391.768
margin_top = -110.265
margin_right = -34.7678
margin_bottom = 123.735

[node name="Stats" type="VBoxContainer" parent="PostGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 38.7712
margin_top = -110.265
margin_right = 395.771
margin_bottom = 123.735
alignment = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Score" type="Label" parent="PostGame/Stats"]
margin_top = 34.0
margin_right = 357.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.92549, 0.945098, 0.117647, 1 )
text = "Score: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highest Score" type="Label" parent="PostGame/Stats"]
margin_top = 68.0
margin_right = 357.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.92549, 0.945098, 0.117647, 1 )
text = "Highest Score: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills" type="Label" parent="PostGame/Stats"]
margin_top = 102.0
margin_right = 357.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.945098, 0.117647, 0.117647, 1 )
text = "Kills: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highest Combo" type="Label" parent="PostGame/Stats"]
margin_top = 136.0
margin_right = 357.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.945098, 0.117647, 0.117647, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Highest Combo: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deaths" type="Label" parent="PostGame/Stats"]
margin_top = 170.0
margin_right = 357.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.945098, 0.117647, 0.117647, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Deaths: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" parent="PostGame" instance=ExtResource( 3 )]
margin_left = 333.5
margin_top = 501.0
margin_right = 693.5
margin_bottom = 561.0
custom_styles/focus = SubResource( 2 )
scene = "res://entities/screens/levels_screen.tscn"
label_text = "Restart  "

[node name="Label" parent="PostGame/Restart" index="0"]
margin_left = 2.245
margin_top = -6.10352e-05
margin_right = 2.245
margin_bottom = -6.10352e-05
text = "Restart  "
align = 1

[connection signal="pressed" from="PreGame/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="PostGame/Restart" to="." method="_on_Restart_pressed"]

[editable path="PreGame/Start"]
[editable path="PostGame/Restart"]
